--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
