--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-geolocation-service": "^5.3.1",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
