--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "expo": "~51.0.18",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-geolocation-service": "^5.3.1",
-    "react-navigation": "^5.0.0",
-    "expo-location": "~17.0.1"
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
