--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-navigation/native-stack": "^6.10.0",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.10.0",
     "@react-navigation/stack": "^6.4.0",
     "expo": "~51.0.18",
     "expo-location": "~17.0.1",
@@ -20,9 +20,10 @@
     "react-native": "0.74.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-navigation": "^5.0.0",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0"
+    "react-native-screens": "^3.32.0",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
