--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -20,7 +20,7 @@
     "react-native": "0.74.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-navigation": "^5.0.0"
