--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@js-joda/core": "^5.6.3",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "expo": "~51.0.18",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0"
   },
