--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-modal": "^13.0.1",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0"
   },
