--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.4.0",
     "expo": "~51.0.18",
     "expo-status-bar": "~1.12.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-modal": "^13.0.1",
