--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@react-navigation/stack": "^6.4.0",
+    "@types/react-native-dotenv": "^0.2.2",
     "expo": "~51.0.18",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
