--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -1,40 +1,52 @@
 {
   "name": "fourtoon-cookie",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eas:dev:ios": "eas build --profile development --local --platform ios",
+    "eas:dev:android": "eas build --profile development --local --platform android"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-google-signin/google-signin": "^12.2.1",
+
     "@js-joda/core": "^5.6.3",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@react-navigation/stack": "^6.4.0",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.44.4",
     "@types/react-native-dotenv": "^0.2.2",
     "expo": "~51.0.18",
+    "expo-dev-client": "~4.0.20",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.20",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-dotenv": "^3.4.11",
-    "react-native-geolocation-service": "^5.3.1",
+
     "react-native-modal": "^13.0.1",
-    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-popup-menu": "^0.16.1",
+
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-url-polyfill": "^2.0.0"
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-dotenv": "^0.2.2",
     "typescript": "^5.1.3"
   },
   "private": true
