--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@js-joda/core": "^5.6.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
