chore: gitignore 갱신

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env*
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -140,5 +141,5 @@ google-services.json
 GoogleService-Info.plist
 
 *.apk
-
 app.json
+eas.json
