--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -35,7 +35,7 @@
     "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
