--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env*
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -128,3 +129,17 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# prebuild
+/fourtoon-cookie/android
+/fourtoon-cookie/ios
+/fourtoon-cookie/my-app
+
+/.idea
+
+google-services.json
+GoogleService-Info.plist
+
+*.apk
+app.json
+eas.json
