--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@js-joda/core": "^5.6.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native": "^6.1.17",
