--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -6,8 +6,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "eas:dev:ios": "eas build --profile development --local --platform ios",
-    "eas:dev:android": "eas build --profile development --local --platform android"
+    "eas:dev:ios": "eas build --profile development --local --platform ios --clear-cache",
+    "eas:dev:android": "eas build --profile development --local --platform android --clear-cache"
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.3.0",
