--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -6,14 +6,14 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "eas:dev:ios": "eas build --profile development --local --platform ios --clear-cache",
+    "eas:dev:ios": "eas build --profile development --platform ios --clear-cache",
     "eas:dev:android": "eas build --profile development --local --platform android --clear-cache"
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@js-joda/core": "^5.6.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
@@ -29,7 +29,7 @@
     "expo-updates": "~0.25.21",
     "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "^0.74.3",
+    "react-native": "0.74.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-get-random-values": "^1.11.0",
@@ -37,8 +37,8 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "3.10.1",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-navigation": "^5.0.0",
     "uuid": "^10.0.0"
