--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.44.4",
     "expo": "~51.0.24",
     "expo-apple-authentication": "^6.4.2",
+    "expo-dev-client": "~4.0.26",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.21",
@@ -37,7 +38,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-navigation": "^5.0.0",
     "uuid": "^10.0.0",
-    "expo-dev-client": "~4.0.26"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
