--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@supabase/supabase-js": "^2.44.4",
@@ -23,18 +24,23 @@
     "expo-apple-authentication": "^6.4.2",
     "expo-dev-client": "~4.0.26",
     "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.5",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.21",
+    "kakao-js-sdk": "^1.2.3",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-kakao-share-link": "^1.0.10",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-share": "^11.0.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-navigation": "^5.0.0",
     "react-query": "^3.39.3",
