--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -27,6 +27,7 @@
     "expo-updates": "~0.25.21",
     "lodash": "^4.17.21",
     "react": "18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-native": "0.74.3",
     "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^13.0.1",
