--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -23,11 +23,14 @@
     "expo-apple-authentication": "^6.4.2",
     "expo-dev-client": "~4.0.26",
     "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.5",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.21",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
@@ -35,6 +38,7 @@
     "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-share": "^11.0.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-navigation": "^5.0.0",
     "react-query": "^3.39.3",
