--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -19,18 +19,16 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@supabase/supabase-js": "^2.44.4",
-    "expo": "~51.0.24",
+    "expo": "^51.0.34",
     "expo-apple-authentication": "^6.4.2",
-    "expo-dev-client": "~4.0.26",
+    "expo-dev-client": "~4.0.27",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.5",
-    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.21",
+    "expo-updates": "~0.25.25",
     "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-fs": "^2.20.0",
+    "react-native": "0.74.5",
     "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
