--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -10,10 +10,11 @@
     "eas:dev:android": "eas build --profile development --local --platform android --clear-cache"
   },
   "dependencies": {
+    "@amplitude/analytics-react-native": "^1.4.10",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@js-joda/core": "^5.6.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.17",
