--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -28,11 +28,14 @@
     "expo-media-library": "~16.0.5",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.25",
+    "i18next": "^23.16.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-i18next": "^15.0.3",
     "react-native": "0.74.5",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-localize": "^3.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-popup-menu": "^0.16.1",
