--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -24,6 +24,7 @@
     "expo": "^51.0.34",
     "expo-apple-authentication": "^6.4.2",
     "expo-dev-client": "~4.0.27",
+    "expo-localization": "^15.0.3",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.5",
     "expo-status-bar": "~1.12.1",
@@ -35,7 +36,6 @@
     "react-i18next": "^15.0.3",
     "react-native": "0.74.5",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-localize": "^3.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-popup-menu": "^0.16.1",
