--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -24,13 +24,16 @@
     "expo": "^51.0.34",
     "expo-apple-authentication": "^6.4.2",
     "expo-dev-client": "~4.0.27",
+    "expo-localization": "^15.0.3",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.5",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.25",
+    "i18next": "^23.16.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-i18next": "^15.0.3",
     "react-native": "0.74.5",
     "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^13.0.1",
