--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -43,6 +43,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-share": "^11.0.3",
+    "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-navigation": "^5.0.0",
     "react-query": "^3.39.3",
