--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@sentry/react-native": "^5.33.1",
