feat: 프론트 알림 기능 구현

--- a/fourtoon-cookie/package.json
+++ b/fourtoon-cookie/package.json
@@ -23,10 +23,13 @@
     "@supabase/supabase-js": "^2.44.4",
     "expo": "^51.0.34",
     "expo-apple-authentication": "^6.4.2",
+    "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.27",
+    "expo-device": "~6.0.2",
     "expo-localization": "^15.0.3",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.5",
+    "expo-notifications": "~0.28.18",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.25",
     "i18next": "^23.16.0",
